[package]
name = "download"
version = "0.1.0"
authors = ["Joey Ezechiëls <joey.ezechiels@gmail.com>"]
description = "A simple cross-platform tool to download things."

[dependencies]
curl = "0.4"
clap = "2.25"

[lib]
name = "download"
path = "src/lib.rs"

[[bin]]
name = "download"
path = "src/bin/main.rs"
