[package]
name = "download"
version = "1.0.0"
authors = ["Joey Ezechiëls <joey.ezechiels@gmail.com>"]
description = "A simple cross-platform tool to download things."

[dependencies]
curl = "0.4"
clap = "2.25"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.5"

[lib]
name = "download"
path = "src/lib.rs"

[[bin]]
name = "download"
path = "src/bin/main.rs"
